# spiderberry

./: .gitignore  CMakeLists.txt  README.md  req.md
RaspiLib/: CMakeLists.txt  LegCoordinates.csv  spiderberry_exe
RaspiLib/Code/inc/: beep.h  main.h  move.h
RaspiLib/Code/src/: .goutputstream-362GZ1  .goutputstream-R3HUZ1  beep.cpp  main.cpp  move.cpp
RaspiLib/RaspiBlocks/src/: UltraSound.cpp
RaspiLib/RaspiLib/inc/: IPin.h
RaspiLib/Samples/TestSpider/: main.cpp
RaspiLib/Spider/inc/: Spider.h
RaspiLib/Spider/src/: Leg.cpp  Spider.cpp
RaspiLib/SpiderTest/: CMakeLists.txt
RaspiLib/rpi_ws281x/: CMakeLists.txt
